--- a/index.html
+++ b/index.html
@@ -21,22 +21,26 @@
            <div class="logo-holder">
             <img src="/Images/Logo.png" class="logo-img">
            </div>
-           <div>
-            <h1 class="NameStock">SCANDAL STORE</h1>
+           <div class="ss">
+            <div id="nn">
+                <h1 class="NameStock">SCANDAL STORE</h1>
+            </div>
+            
+            <div id="dd">
+                <div class="menu" id="main-menu">
+                    <a href="/index.html">Главное</a>
+                     <a href="#">Связаться с нами</a>
+                     <a href="#">Достижения</a>
+                     <a href="#">Адреса</a>
+                 </div>
+
+            </div>
             
            </div>
-            <ul id="main-menu">
-                <li class="main-items"><a href="/index.html">Главное</a></li>
-                <li class="main-items"><a href="#">Связаться с нами</a></li>
-                <li class="main-items"><a href="#">Достижения</a></li>
-                <li class="main-items"><a href="#">{{message}}</a></li>
-            </ul>
         </nav>
     <header class="backhead"></header>
-
     </header>
-<!--    COVER          -->
-
+<!--    COVER      -->
 <section class="cover">
     <div class="cover-dimmer">
         <h1 class="namecover">
@@ -55,7 +59,7 @@
 
     <div class="service">
             <h3 class="service-title">Заказ комплектующих</h3>
-            <img src="/Images/mainpic.jpg" class="minipic">
+            <img src="/Images/video.jpg" class="minipic">
             <p class="description-1">Заказ редких комплектующих</p>
                 <button class="btn-service">Заказать</button>
             </div>
@@ -64,7 +68,7 @@
 
         <div class="service">
             <h3 class="service-title">Сборка на месте</h3>
-            <img src="/Images/mainpic.jpg" class="minipic">
+            <img src="/Images/ПК-сборка-ПК-вопрос-6294812.png" class="minipic">
             <p class="description-1">Заказ редких комплектующих</p>
                 <button class="btn-service">Заказать</button>
             </div>
